EXTRA_DIST = \
	conf.py \
	build.sh \
	images/cig_bluebg.png \
	index.md \
	configs/index.md \
	configs/centos.md \
	configs/clusters.md \
	configs/debian.md \
	configs/fedora.md \
	configs/macos.md \
	configs/ubuntu.md \
	developer/index.md \
	developer/binary.md \
	developer/docker.md \
	install/index.md \
	install/configure.md \
	install/download.md \
	install/environment.md \
	install/make.md \
	install/overview.md \
	install/troubleshooting.md \
	install/verify.md \
	overview/index.md \
	overview/packages.md \
	overview/requirements.md \
	overview/use-cases.md


# End of file
