EXTRA_DIST = \
	conf.py \
	build.sh \
	index.md \
	_static/images/cig_logo_dots.png \
	_static/images/cig_short_installer.png \
	_templates/sidebar-cig.html \
	configs/index.md \
	configs/centos.md \
	configs/clusters.md \
	configs/macos.md \
	configs/ubuntu.md \
	developer/index.md \
	developer/ci-docker.md \
	developer/creating-binaries.md \
	devenv/index.md \
	devenv/configs.md \
	devenv/docker-devenv.md \
	devenv/figs/docker-attach-vscode.png \
	install/index.md \
	install/configure.md \
	install/download.md \
	install/environment.md \
	install/make.md \
	install/overview.md \
	install/troubleshooting.md \
	install/verify.md \
	overview/index.md \
	overview/packages.md \
	overview/release-notes.md \
	overview/requirements.md \
	overview/use-cases.md


# End of file
